# rubato

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .style.yapf  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPING.md  LICENSE  Makefile  README.md  Sounds.py  StarterKit.py  autodocstringtemplate.mustache  b  b.ps1  demo.py  logo.kra  logo.kra~  main.py  physics_demo.py  player_controller.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  timer.py  watchBuild.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: auto_commenter.yml  build.yml  build_docs.yml  deployment.yml  dev_docs.yml  docs.yml  docs_test.yml  manual_release.yml  nightly.yml  project_manager.yml  release.yml  stable_docs.yml  tests.yml
PygamePlus/: Broadcast.py  Group.py  Scene.py  Sprite.py  __init__.py  broadcast.py  group.py  input.py  sprite.py
PygamePlus/scenes/: Scene.py  SceneManager.py  __init__.py  scene.py  scene_manager.py
PygamePlus/utils/: DISPLAY.py  STATE.py  __init__.py  pp_math.py  window_changes.py
Starter Files/: Sounds.py  StarterKit.py  cool_code_library.py  nice_functions.py  player_controller.py  timer.py
demo/: 3d_renderer.py  CustomComponent.py  Makefile  UI_test.py  _donut.py  _run_all.py  _run_all.sh  asteroids.py  ball_pit.py  camera_demo.py  custom_components.py  deprecated.py  depreciated.py  donut.py  draw.py  draw_demo.py  draw_point.py  events_demo.py  feature_test.py  feature_test2.py  happy_bday.py  memory_test.py  noise_demo.py  noise_drawing.py  noise_test.py  offset_demo.py  particles_demo.py  physics_demo.py  pixel_mutation.py  platformer.py  sdl2_test.py  shape_rotator.py  sound_demo.py  spaceships.py  surface_demo.py  test_noise.py  testnoise.py  tetris.py  text_demo.py  time_demo.py  (+3 more)
demo/platformer/: data_scene.py  end.py  end_menu.py  level1.py  level2.py  main.py  main_menu.py  moving_platform.py  player.py  player_controller.py  shared.py
demo/platformer_stripped/: level1.py  main.py  main_menu.py  player_controller.py  shared.py
demo/quick_testing/: UI_test.py  feature_test.py  noise_test.py  try_new_defaults.py
demo/rubato_usage/: generators.py
demo/spring_demo/: classes.py  main.py  objects.py
demo/sprites/: tes.txt  test.tmx  test.tsx
demo/test/: Makefile  PixelEditor.cpp  UI_test.py  cPixelEditor.pxd  demo.py  feature_test.py  happy_bday.py  instructions.txt  jitter.py  noise_test.py  test-surfaces.py  test.cpp  test.py  test_surfaces.cpp  test_surfaces.py  text.py
demo/testing/: temp.py
demo/try/: main.py  player_controller.py  shared.py
demo/tutorial_follow_along/: player_controller.py  shared.py
demo/tutorial_follow_along_check/: main.py  player_controller.py  shared.py
demo/tutorial_follow_along_make/: level1.py  main.py  player_controller.py  shared.py
docs/: .buildinfo  404.html  CNAME  Makefile  api.html  defaults.html  dirs.json  genindex.html  index.html  intro.html  make.bat  objects.inv  py-modindex.html  requirements.txt  robots.txt  search.html  searchindex.js  sitemap_gen.py  v_sidebar_saver.py  vbar_generator.py  version_iframe.html  version_sidebar.html  versions.json
docs/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/_modules/: index.html  rubato.html
docs/_sources/: index.rst.txt  intro.rst.txt
docs/api/: index.html
docs/blog/: blog-template.html-template  index.html
docs/dev/: .buildinfo  api.html  defaults.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
docs/doctrees/: api.doctree  defaults.doctree  environment.pickle  index.doctree  intro.doctree  site_index.doctree
docs/latest/: index.html  intro.html  objects.inv  versions.html
docs/source/: api.rst  conf.py  contents.rst  defaults.rst  demos.rst  events.rst  index.rst  input-details.rst  intro.rst  key-names.rst  tutorials.rst  usage_guidelines.rst
docs/stable/: .buildinfo  api.html  defaults.html  index.html  intro.html  objects.inv  py-modindex.html  searchindex.js  sitemap.xml
pgp/: __init__.py  broadcast.py  group.py  input.py  radio.py  sprite.py
pgp/scenes/: __init__.py  camera.py  scene.py  scene_manager.py
pgp/sprite/: __init__.py  collider.py  image.py  rigidbody.py  sat.js  sprite.py
pgp/utils/: COL_TYPE.py  DISPLAY.py  STATE.py  __init__.py  display.py  math.py  processing.py  sat.py  satreference.js  time.py  vector.py
rubato/: __init__.c  __init__.py  display.py  game.c  game.py  group.py  helpers.py  input.py  misc.c  misc.py  radio.py  sound.py
rubato/__pyinstaller/: __init__.py  hook-rubato.py  hooks-rubato.py
rubato/c_src/: PixelEditor.cpp  __init__.cpp  __init__.py  cPixelEditor.pxd  c_draw.cpp  c_draw.py  cdraw.cpp  cdraw.pxd  pixel_editor.cpp  pixel_editor.py
rubato/classes/: __init__.py  camera.py  component.py  game_object.py  generators.py  group.py  qtree.py  scene.py  scene_manager.py  sprite.py  spritesheet.py  ui.py
rubato/scenes/: __init__.py  (+3 more)
testing/: demo.py
tests/: camera_test.py  color_test.py  conftest.py  game_test.py  go_comp_test.py  group_test.py  init_test.py  input_test.py  math_test.py  misc_test.py  noise_test.py  radio_test.py  vector_test.py
(+381 files in other folders)
