[metadata]
name = rubato
version = 2.0.1dev
url = https://rubato.app
download_url = https://rubato.app
project_urls =
    Source = https://github.com/rubatopy/rubato
    Issue Tracker = https://github.com/rubatopy/rubato/issues
    Documentation = https://rubato.app
author = Martin Chaperot, Yamm Elnekave, Tomer Sedan
author_email = info@rubato.app
maintainer = Martin Chaperot
maintainer_email = martin@rubato.app
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Typing :: Typed
license = GPL-3.0
description = A lightweight, developer-first game engine built for Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rubato, game development, education, game engine, engine, physics, sdl, sdl2

[options]
install_requires =
    PySDL2==0.9.11
python_requires = >=3.10
packages = find:
zip_safe = True


[options.extras_require]
advanced =
    numpy==1.22.3
    opensimplex==0.4.2
dev =
    pylint==2.12.2
    yapf==0.32.0

[options.package_data]
rubato =
    static/fonts/*.ttf
    static/png/*.png
