[metadata]
name = rubato
version = 2.1.2dev0
url = https://rubato.app
download_url = https://rubato.app
project_urls =
    Source = https://github.com/rubatopy/rubato
    Issue Tracker = https://github.com/rubatopy/rubato/issues
    Documentation = https://rubato.app
author = Martin Chaperot, Yamm Elnekave, Tomer Sedan
author_email = info@rubato.app
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Typing :: Typed
license = GPL-3.0
description = A lightweight, developer-first game engine built for Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rubato, game development, education, game engine, engine, physics, sdl, sdl2

[options]
install_requires =
    PySDL2==0.9.11
python_requires = >=3.10
packages =
    rubato
    rubato.tests

[options.extras_require]
dev =
    pylint==2.12.2
    yapf==0.32.0
    pre-commit==2.19.0
    pytest==7.1.2
    pytest-cov==3.0.0
docs =
    Sphinx==4.4.0
    sphinx-autobuild==2021.3.14
    furo==2022.1.2
    sphinx-autodoc-typehints==1.16.0
    sphinx-copybutton==0.4.0
    sphinx-sitemap==2.2.0
    sphinx_inline_tabs==2022.1.2b11
    sphinxext-opengraph==0.5.1
    sphinx-design==0.0.13

[options.entry_points]
pyinstaller40 =
    hook-dirs = rubato.__pyinstaller:get_hook_dirs

